--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
   </head>
   <body>
+    <!-- header.parallax.parallax-padre>h1.titulo-parallax>{Titulo} -->
+    <header class="parallax parallax-padre">
+      <h1 class="titulo-parallax">Titulo</h1>
+    </header>
     <section class="container">
       <div class="padre">
         <div class="hijo hijo-text">
