--- a/perfil2.html
+++ b/perfil2.html
@@ -11,6 +11,66 @@
 
 </head>
 <body>
+  <header>
+      <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light mimenu">
+          <a class="navbar-brand" href="#">
+              <img src="images/bootstrap-solid.svg" width="30" height="30" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="#miseccion">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="perfil1.html" target="_blank">Perfil 1</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Opcion 3
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Otra Opcion</a>
+                          <!-- <a class="dropdown-item" href="#">Another action</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Something else here</a> -->
+                      </div>
+                  </li>
+                  <!-- <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li> -->
+              </ul>
+              <!-- <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form> -->
+          </div>
+      </nav>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/banner-html5-css3-4.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/introduccion-a-html5.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    
+  </header>
   <section class="container-fluid p-0">
       <!-- header.parallax#inicial>h1.titulo_parallax>{Hola Mundo} -->
       <header class="parallax" id="inicial">
@@ -55,7 +115,7 @@
           </article>
       </section>
       <!-- section.row>p.address.col-12.text-capitalize>lorem50 -->
-      <section class="row">
+      <section class="row" id="miseccion">
           <p class="address col-12 text-capitalize px-5 py-4 m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsum nesciunt quo ullam inventore voluptatem ipsam cum voluptate ratione consequatur eum nemo illum provident optio ex mollitia asperiores reiciendis, delectus dignissimos repudiandae! Debitis, temporibus laborum, assumenda minus nostrum ullam non dignissimos ut voluptatibus adipisci nobis soluta quod beatae necessitatibus totam?</p>
       </section>
       <!-- section.parallax#final -->
@@ -68,9 +128,61 @@
               <a class="btn btn-primary" href="http://facebook.com" target="_blank">
                 <i class="fab fa-facebook-f icon-redes"></i>
               </a>
+              <button type="button" class="btn btn-success mr-2" data-toggle="modal" data-target="#mimodal">
+                  Contacto
+              </button>
           </div>
         </div>
       </footer>
-  </section>  
+  </section> 
+  <!-- Modal -->
+  <div class="modal fade" id="mimodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header mimodal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Contacto</h5>
+                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button> -->
+              </div>
+              <form>
+              <div class="modal-body">
+                     <div class="form-group">
+                         <label for="nombre">Nombre</label>
+                         <input type="text" class="form-control" id="nombre"
+                             placeholder="Tu Nombre" required>
+                     </div>
+                     <div class="form-group">
+                         <label for="email">Email</label>
+                         <input type="email" class="form-control" id="email" placeholder="tuemail@gmail.com" required>
+                     </div>
+                     <div class="form-group">
+                         <label for="pais">Pais</label>
+                         <select class="form-control" id="pais" required>
+                             <option value="ve">Venezuela</option>
+                             <option value="co">Colombia</option>
+                             <option value="chil">Chile</option>
+                         </select>
+                     </div>
+                     <div class="form-group">
+                         <label for="mensaje">Mensaje</label>
+                         <textarea class="form-control" required id="mensaje" rows="3"
+                             placeholder="Escribe..."></textarea>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                  <button type="submit" class="btn btn-success">Enviar</button>
+              </div>
+              </form>
+          </div>
+      </div>
+  </div>
+  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+  </script>
 </body>
 </html>
